# peekoo-ai

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md  check_plugins.mjs  check_plugins.py  crop.ps1  install.ps1  install2.ps1  install_plugin.py  justfile  peekoo-log-output.txt  skills-lock.json
.cargo/: config.toml
.github/: pull_request_template.md  release.yml
.github/workflows/: auto-tag.yml  ci.yml  pr-release-label.yml  release.yml
.peekoo/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  USER.md  memory.md
.peekoo/memories/: changelogs.md
.peekoo/skills/: memory.md
ai/: AGENTS.md  issues.md
ai/docs/: MACOS_PRIVATE_API.md  PRD-zh.md  TODO.md  plugin-authoring.md  release.md  tech-spec.md
ai/memories/: todo.md
ai/plans/: 2026-03-24-agent-task-enhancements.md  2026-03-24-built-in-pomodoro-refactor.md  2026-03-28-acp-client-migration.md  2026-03-28-acp-migration-completion.md  2026-03-29-acp-discovery-simplification.md  2026-04-04-posthog-analytics-integration.md  2026-04-04-sentry-error-tracking.md  (+25 more)
apps/desktop-tauri/src-tauri/: Cargo.toml  LOGS.txt  MACOS_PRIVATE_API.md  build.rs  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/locales/: en.json  es.json  fr.json  ja.json  zh-CN.json  zh-TW.json
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs  mijia.rs  tray_i18n.rs
apps/desktop-tauri/src-tauri/src/agent_settings/: mod.rs
config/: mcporter.json
crates/acp-registry-client/: Cargo.toml
crates/acp-registry-client/src/: cache.rs  client.rs  filter.rs  install.rs  lib.rs  platform.rs  types.rs
crates/peekoo-agent/: AGENTS.md  Cargo.toml  README.md
crates/peekoo-agent-acp/: AGENTS.md  Cargo.toml  README.md
crates/peekoo-agent-acp/src/: agent.rs  context.rs  lib.rs  main.rs  mcp_tools.rs
crates/peekoo-agent-app/: Cargo.toml  build.rs
crates/peekoo-agent-app/src/: acp_client.rs  agent_provider_commands.rs  agent_provider_service.rs  agent_runtime_commands.rs  agent_runtime_service.rs  agent_scheduler.rs  application.rs  conversation.rs  google_calendar.rs  google_calendar_service.rs  lib.rs  mcp_server.rs  plugin.rs  plugin_dependency.rs  plugin_localization.rs  plugin_tool_impl.rs  productivity.rs  settings.rs  task_notification_scheduler.rs  task_parser.rs  task_runtime_service.rs  task_tools.rs  workspace_bootstrap.rs
crates/peekoo-agent-app/src/runtime_adapters/: mod.rs
crates/peekoo-agent-app/src/settings/: catalog.rs  dto.rs  mod.rs  pi_models.rs  skills.rs  store.rs
crates/peekoo-agent-app/src/settings/domain/: agent_settings.rs  mod.rs
crates/peekoo-agent-app/templates/persona/: AGENTS.md  BOOTSTRAP.md  SOUL.md  USER.md
crates/peekoo-agent-app/templates/persona/.agents/skills/memory-manager/: SKILL.md
crates/peekoo-agent-app/templates/workspace/: AGENTS.md  IDENTITY.md  USER.md
crates/peekoo-agent-app/templates/workspace/.agents/skills/peekoo-agent-skill/: SKILL.md  mcporter.json
crates/peekoo-agent-app/tests/: google_calendar_account_profile.rs  google_calendar_async_runtime.rs  google_calendar_client_json.rs  google_calendar_logic.rs  productivity_service.rs  sqlite_task_service.rs
crates/peekoo-agent-auth/: Cargo.toml
crates/peekoo-agent-auth/src/: callback.rs  error.rs  flow.rs  lib.rs  pkce.rs  service.rs  url.rs
crates/peekoo-agent-auth/src/provider/: google_calendar.rs  mod.rs  openai_codex.rs
crates/peekoo-agent-auth/tests/: google_calendar_provider.rs  oauth_flow.rs
crates/peekoo-agent/examples/persona/: IDENTITY.md  MEMORY.md  SOUL.md
crates/peekoo-agent/src/: config.rs  lib.rs  mcp_bridge.rs  mcp_client.rs  plugin_tool.rs  process.rs  service.rs  session_store.rs  skill.rs
crates/peekoo-agent/src/backend/: acp.rs  mod.rs
crates/peekoo-analytics/: Cargo.toml
crates/peekoo-analytics-tauri/: Cargo.toml
crates/peekoo-analytics-tauri/src/: lib.rs  posthog.rs  sentry.rs
crates/peekoo-analytics/src/: events.rs  lib.rs  posthog.rs  sentry.rs
crates/peekoo-app-settings/: Cargo.toml  build.rs
crates/peekoo-app-settings/src/: dto.rs  lib.rs  service.rs  store.rs
crates/peekoo-mcp-server/: Cargo.toml  README.md  mcporter.json
crates/peekoo-mcp-server/src/: handler.rs  lib.rs  plugin.rs
crates/peekoo-node-runtime/: Cargo.toml
crates/peekoo-node-runtime/src/: archive.rs  command.rs  http_client.rs  lib.rs  node_runtime.rs  paths.rs
crates/peekoo-plugin-host/: Cargo.toml
crates/peekoo-plugin-host/src/: config.rs  error.rs  events.rs  host_functions.rs  lib.rs  manifest.rs  permissions.rs  registry.rs  runtime.rs  state.rs  tools.rs
crates/peekoo-plugin-store/: Cargo.toml
crates/peekoo-plugin-store/src/: lib.rs
crates/peekoo-pomodoro-app/: Cargo.toml
crates/peekoo-pomodoro-app/src/: lib.rs
crates/peekoo-task-app/: Cargo.toml
crates/peekoo-task-app/src/: dto.rs  lib.rs  service.rs  sqlite_task_service.rs
crates/peekoo-task-app/tests/: sqlite_task_service.rs
crates/peekoo-utils/: Cargo.toml
crates/peekoo-utils/src/: lib.rs  process.rs
docs/: MACOS_PRIVATE_API.md  README.md  TODO.md  analytics.md  google-calendar-credentials.md  install-macos.md  plugin-authoring.md  release.md  tech-spec.md
plugins/google-calendar/: Cargo.toml  peekoo-plugin.toml
plugins/google-calendar/src/: lib.rs
plugins/google-calendar/ui/: panel.css  panel.html  panel.js  panel.test.js  panel_js.test.js
plugins/linear/: Cargo.toml  peekoo-plugin.toml
plugins/linear/src/: lib.rs
plugins/linear/ui/: panel.css  panel.html  panel.js
plugins/mijia-smart-home/: Cargo.toml  README.md  peekoo-plugin.toml
plugins/mijia-smart-home/companions/: mijia_bridge.py  requirements.txt
plugins/mijia-smart-home/src/: api.rs  crypto.rs  device.rs  error.rs  lib.rs
plugins/mijia-smart-home/ui/: panel-v2.html  panel.html
plugins/pomodoro/: Cargo.toml  peekoo-plugin.toml
plugins/pomodoro/src/: lib.rs
scripts/: build_updater_manifest.py  fetch_opencode_bundle.py  release.py
tests/: test_release.py
tmp/: check_db.rs  git_diff.txt  justlog.txt  ui_diff.txt
(+620 files in other folders)
