[workspace]
members = [
  "crates/peekoo-productivity-domain",
  "crates/peekoo-pomodoro-domain",
  "crates/peekoo-pomodoro-app",
  "crates/persistence-sqlite",
  "crates/security",
  "crates/peekoo-agent",
  "crates/peekoo-agent-acp",
  "crates/peekoo-agent-auth",
  "crates/peekoo-agent-app",
  "crates/peekoo-app-settings",
  "crates/peekoo-paths",
  "crates/peekoo-scheduler",
  "crates/peekoo-notifications",
  "crates/peekoo-plugin-host",
  "crates/peekoo-plugin-store",
  "crates/peekoo-mcp-server",
  "apps/desktop-tauri/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true




