[workspace]
members = [
  "crates/peekoo-task-domain",
  "crates/peekoo-task-app",
  "crates/peekoo-pomodoro-domain",
  "crates/peekoo-pomodoro-app",
  "crates/persistence-sqlite",
  "crates/security",
  "crates/peekoo-agent",
  "crates/peekoo-agent-acp",
  "crates/peekoo-agent-auth",
  "crates/peekoo-agent-app",
  "crates/peekoo-app-settings",
  "crates/peekoo-paths",
  "crates/peekoo-scheduler",
  "crates/peekoo-notifications",
  "crates/peekoo-utils",
  "crates/peekoo-plugin-host",
  "crates/peekoo-plugin-store",
  "crates/peekoo-node-runtime",
  "crates/acp-registry-client",
  "crates/peekoo-mcp-server",
  "crates/peekoo-analytics",
  "apps/desktop-tauri/src-tauri",
]
resolver = "2"

[workspace.dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
asupersync = "=0.2.9"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.24"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true




