[package]
name = "peekoo-agent-app"
version = "0.1.0"
edition = "2024"

[features]
default = ["plugin-runtime"]
plugin-runtime = ["peekoo-plugin-host/plugin-runtime"]

[dependencies]
peekoo-agent = { path = "../peekoo-agent" }
peekoo-app-settings = { path = "../peekoo-app-settings" }
peekoo-agent-auth = { path = "../peekoo-agent-auth" }
peekoo-productivity-domain = { path = "../peekoo-productivity-domain" }
peekoo-persistence-sqlite = { path = "../persistence-sqlite" }
peekoo-security = { path = "../security" }
peekoo-paths = { path = "../peekoo-paths" }
peekoo-notifications = { path = "../peekoo-notifications" }
peekoo-plugin-host = { path = "../peekoo-plugin-host" }
peekoo-plugin-store = { path = "../peekoo-plugin-store" }
peekoo-scheduler = { path = "../peekoo-scheduler" }
pi = { version = "0.1.7", package = "pi_agent_rust", default-features = false, features = ["image-resize", "clipboard", "sqlite-sessions"] }
async-trait = "0.1"
asupersync = "=0.2.5"
rusqlite = { version = "0.38" }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1.50.0", features = ["sync"] }
tokio-util = "0.7"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
pi = { version = "0.1.7", package = "pi_agent_rust", default-features = false, features = ["image-resize", "clipboard", "sqlite-sessions"] }
tokio = { version = "1.50.0", features = ["macros", "rt"] }
