[package]
name = "peekoo-agent-app"
version = "0.1.0"
edition = "2024"

[features]
default = ["plugin-runtime"]
plugin-runtime = ["peekoo-plugin-host/plugin-runtime"]

[dependencies]
agent-client-protocol = { version = "=0.10.2", features = ["unstable"] }
peekoo-agent = { path = "../peekoo-agent" }
peekoo-utils = { path = "../peekoo-utils" }
peekoo-app-settings = { path = "../peekoo-app-settings" }
peekoo-agent-auth = { path = "../peekoo-agent-auth" }
peekoo-task-domain = { path = "../peekoo-task-domain" }
peekoo-task-app = { path = "../peekoo-task-app" }
peekoo-pomodoro-app = { path = "../peekoo-pomodoro-app" }
peekoo-persistence-sqlite = { path = "../persistence-sqlite" }
peekoo-security = { path = "../security" }
peekoo-paths = { path = "../peekoo-paths" }
peekoo-notifications = { path = "../peekoo-notifications" }
peekoo-plugin-host = { path = "../peekoo-plugin-host" }
peekoo-plugin-store = { path = "../peekoo-plugin-store" }
peekoo-scheduler = { path = "../peekoo-scheduler" }
peekoo-mcp-server = { path = "../peekoo-mcp-server", features = ["plugin-runtime"] }
acp-registry-client = { path = "../acp-registry-client" }
peekoo-node-runtime = { path = "../peekoo-node-runtime" }
async-trait = "0.1"
asupersync = { workspace = true }
rusqlite = { workspace = true }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1.50.0", features = ["sync", "process", "io-util", "rt-multi-thread", "net"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
lazy_static = "1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt"] }
tempfile = "3"
