[package]
name = "peekoo-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
peekoo-paths = { path = "../peekoo-paths" }
pi = { workspace = true }
async-trait = "0.1"
tokio = { version = "1", features = ["rt"] }
serde_json = "1"

[dev-dependencies]
asupersync = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
