[package]
name = "peekoo-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
peekoo-paths = { path = "../peekoo-paths" }
peekoo-persistence-sqlite = { path = "../persistence-sqlite" }
agent-client-protocol = "0.10"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "process", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["client", "transport-streamable-http-client-reqwest"] }
rusqlite = { version = "0.39", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[dev-dependencies]
asupersync = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
