[package]
name = "peekoo-analytics"
version = "0.1.0"
edition = "2024"
description = "Analytics event definitions and provider integration for Peekoo"

[features]
default = []
sentry = ["dep:sentry"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sentry = { version = "0.42", default-features = false, optional = true, features = [
    "backtrace",
    "contexts",
    "panic",
    "debug-images",
    "reqwest",
    "rustls",
    "log",
] }
