[package]
name = "peekoo-app-settings"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
peekoo-paths = { path = "../peekoo-paths" }
rusqlite = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
peekoo-persistence-sqlite = { path = "../persistence-sqlite" }
tempfile = "3"
