[package]
name = "peekoo-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["server", "macros", "transport-streamable-http-server", "client", "transport-streamable-http-client-reqwest"] }
axum = "0.8"
tokio = { version = "1", features = ["full", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
peekoo-task-domain = { path = "../peekoo-task-domain" }
peekoo-task-app = { path = "../peekoo-task-app" }
peekoo-plugin-host = { path = "../peekoo-plugin-host", optional = true }
rustls = { version = "0.23", features = ["ring"] }

[features]
default = []
plugin-runtime = ["peekoo-plugin-host", "peekoo-plugin-host/plugin-runtime"]

[lib]
name = "peekoo_mcp_server"
