[package]
name = "peekoo-plugin-host"
version = "0.1.0"
edition = "2024"

[features]
default = ["plugin-runtime"]
plugin-runtime = ["extism"]

[dependencies]
extism = { version = "1.13", optional = true }
peekoo-notifications = { path = "../peekoo-notifications" }
peekoo-paths = { path = "../peekoo-paths" }
peekoo-scheduler = { path = "../peekoo-scheduler" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
rusqlite = { version = "0.38" }
