[package]
name = "peekoo-plugin-host"
version = "0.1.0"
edition = "2024"

[features]
default = ["plugin-runtime"]
plugin-runtime = ["extism"]

[dependencies]
dirs = "6"
extism = { version = "1.13", optional = true }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
peekoo-notifications = { path = "../peekoo-notifications" }
peekoo-paths = { path = "../peekoo-paths" }
peekoo-scheduler = { path = "../peekoo-scheduler" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
rusqlite = { version = "0.38" }
tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2"
