[package]
name = "peekoo-plugin-host"
version = "0.1.0"
edition = "2024"

[features]
default = ["plugin-runtime"]
plugin-runtime = ["extism"]

[dependencies]
dirs = "6"
extism = { version = "1.13", optional = true }
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
peekoo-notifications = { path = "../peekoo-notifications" }
peekoo-agent-auth = { path = "../peekoo-agent-auth" }
peekoo-productivity-domain = { path = "../peekoo-productivity-domain" }
peekoo-paths = { path = "../peekoo-paths" }
peekoo-scheduler = { path = "../peekoo-scheduler" }
peekoo-security = { path = "../security" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.50.0", features = ["rt"] }
toml = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
rusqlite = { version = "0.38" }
tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
url = "2"
chrono = "0.4"
