[package]
name = "peekoo-plugin-store"
version = "0.1.0"
edition = "2024"

[dependencies]
peekoo-paths = { path = "../peekoo-paths" }
peekoo-plugin-host = { path = "../peekoo-plugin-host" }
rusqlite = { version = "0.38" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
ureq = { version = "2", features = ["json"] }
