[package]
name = "linear"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
peekoo-plugin-sdk = { path = "../../crates/peekoo-plugin-sdk" }
extism-pdk = "1.4"
