[package]
name = "mijia-smart-home"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
peekoo-plugin-sdk = { path = "../../crates/peekoo-plugin-sdk" }
extism-pdk = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rc4 = "0.2"
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
regex = "1"
flate2 = "1"
