[package]
name = "pomodoro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
peekoo-plugin-sdk = { path = "../../crates/peekoo-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
extism-pdk = "1.0"

[workspace]
# This prevents the plugin from being included in the main workspace's members.
# WASM targets often have conflicting build requirements with desktop targets.
