[package]
name = "peekoo-desktop-tauri"
version = "0.1.0"
description = "Peekoo AI Desktop Pet - Tauri Version"
edition = "2024"
rust-version = "1.85"

[lib]
name = "peekoo_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

peekoo-agent-app = { path = "../../../crates/peekoo-agent-app" }
