[package]
name = "peekoo-desktop-tauri"
version = "0.1.34"
description = "Peekoo AI Desktop Pet - Tauri Version"
edition = "2024"
rust-version = "1.85"

[lib]
name = "peekoo_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = { version = "2", features = ["tracing"] }
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
tauri-plugin-window-state = "2"
tauri-plugin-posthog = "0.2"
tauri-plugin-sentry = { version = "0.5", features = ["minidump"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["time"] }
tokio-util = "0.7"
tracing = "0.1"

peekoo-agent-app = { path = "../../../crates/peekoo-agent-app", default-features = false }
peekoo-analytics = { path = "../../../crates/peekoo-analytics", features = ["sentry"] }
peekoo-paths = { path = "../../../crates/peekoo-paths" }
rusqlite = { workspace = true }
which = "7"
rust-i18n = "3"

[target.'cfg(target_os = "windows")'.dependencies]
dirs = "6"
